<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
    >

    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_container">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.mammutgroup.taxi.activity.AbstractHomeActivity"
            >

         <!--   <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_controller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|right"
                />-->

            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/multiple_actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                fab:fab_addButtonColorNormal="@color/white"
                fab:fab_addButtonColorPressed="@color/white_pressed"
                fab:fab_addButtonPlusIconColor="@color/half_black"
                fab:fab_labelStyle="@style/menu_labels_style"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_cancel_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorNormal="@color/red_light"
                    fab:fab_colorPressed="@color/white_pressed"
                    fab:fab_title="@string/title_fab_cancel_trip"
                    />
                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_arrival_notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorNormal="@color/blue_light"
                    fab:fab_colorPressed="@color/white_pressed"
                    fab:fab_title="@string/title_fab_notify_arrived"
                    />
                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_start_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorNormal="@color/green_light"
                    fab:fab_colorPressed="@color/white_pressed"
                    fab:fab_title="@string/title_fab_start_trip"
                    />
                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_end_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    fab:fab_colorNormal="@color/keppel"
                    fab:fab_colorPressed="@color/white_pressed"
                    fab:fab_title="@string/title_fab_end_trip"
                    />

            </com.getbase.floatingactionbutton.FloatingActionsMenu>





        </fragment>

    </FrameLayout>


</RelativeLayout>
